backend/server.log
+ exec gosu vibecode scripts/start --hot
Installing dependencies and generating Prisma client...
[0.03ms] ".env"
bun install v1.2.19 (aad3abea)

$ prisma generate
Environment variables loaded from .env
Prisma schema loaded from prisma/schema.prisma

✔ Generated Prisma Client (v6.17.1) to ./generated/prisma in 101ms

Start by importing your Prisma Client (See: https://pris.ly/d/importing-client)

Tip: Interested in query caching in just a few lines of code? Try Accelerate today! https://pris.ly/tip-3-accelerate


Checked 761 installs across 703 packages (no changes) [1283.00ms]
Starting server in dev mode with hot reload...
$ NODE_ENV=development bun run --hot src/index.ts
Failed to find Response internal state key
✅ Environment variables validated successfully
🔐 [Auth] Initializing Better Auth...
✅ [Auth] Better Auth initialized
🔗 [Auth] Base URL: https://preview-whjxltxnjtvq.share.sandbox.dev
🌐 [Auth] Trusted origins: vibecode://, http://localhost:3000, https://preview-whjxltxnjtvq.share.sandbox.dev
🔧 Initializing Hono application...
🔐 Mounting Better Auth handler at /api/auth/*
🎮 Mounting game routes at /api/game
💰 Mounting player routes at /api/players
🎲 Mounting dealer routes at /api/dealers
💸 Mounting expense routes at /api/expenses
⚙️  Starting server...
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📍 Environment: development
🚀 Server is running on port 3000
🔗 Base URL: http://localhost:3000
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📚 Available endpoints:
  🔐 Auth:     /api/auth/*
  🎮 Game:     GET /api/game/active, POST /api/game/end, GET /api/game/:id/summary
  💰 Players:  POST /api/players/transaction, GET /api/players/transactions/:sessionId
  🎲 Dealers:  POST /api/dealers/down, GET /api/dealers/downs/:sessionId
  💸 Expenses: POST /api/expenses, GET /api/expenses/:sessionId
  💚 Health:   GET /health
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Failed to find Response internal state key
✅ Environment variables validated successfully
🔐 [Auth] Initializing Better Auth...
✅ [Auth] Better Auth initialized
🔗 [Auth] Base URL: https://preview-whjxltxnjtvq.share.sandbox.dev
🌐 [Auth] Trusted origins: vibecode://, http://localhost:3000, https://preview-whjxltxnjtvq.share.sandbox.dev
🔧 Initializing Hono application...
🔐 Mounting Better Auth handler at /api/auth/*
🎮 Mounting game routes at /api/game
💰 Mounting player routes at /api/players
🎲 Mounting dealer routes at /api/dealers
💸 Mounting expense routes at /api/expenses
⚙️  Starting server...
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📍 Environment: development
🚀 Server is running on port 3000
🔗 Base URL: http://localhost:3000
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📚 Available endpoints:
  🔐 Auth:     /api/auth/*
  🎮 Game:     GET /api/game/active, POST /api/game/end, GET /api/game/:id/summary
  💰 Players:  POST /api/players/transaction, GET /api/players/transactions/:sessionId
  🎲 Dealers:  POST /api/dealers/down, GET /api/dealers/downs/:sessionId
  💸 Expenses: POST /api/expenses, GET /api/expenses/:sessionId
  💚 Health:   GET /health
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

<-- GET /api/game/active
🎮 [Game] Getting active game session
🎮 [Game] Found active session: cmijfilg90000m2esoerheb14
--> GET /api/game/active [32m200[0m 5ms
<-- GET /api/game/cmijfilg90000m2esoerheb14/summary
🎮 [Game] Getting summary for session: cmijfilg90000m2esoerheb14
🎮 [Game] Summary calculated - Net profit: $-396.00, Till balance: $2404.00
--> GET /api/game/cmijfilg90000m2esoerheb14/summary [32m200[0m 3ms
<-- GET /api/players/transactions/cmijfilg90000m2esoerheb14
💰 [Players] Getting transactions for session: cmijfilg90000m2esoerheb14
💰 [Players] Found 12 transactions
--> GET /api/players/transactions/cmijfilg90000m2esoerheb14 [32m200[0m 1ms
<-- GET /api/game/cmijfilg90000m2esoerheb14/summary
🎮 [Game] Getting summary for session: cmijfilg90000m2esoerheb14
🎮 [Game] Summary calculated - Net profit: $-396.00, Till balance: $2404.00
--> GET /api/game/cmijfilg90000m2esoerheb14/summary [32m200[0m 3ms
<-- GET /api/game/active
🎮 [Game] Getting active game session
🎮 [Game] Found active session: cmijfilg90000m2esoerheb14
--> GET /api/game/active [32m200[0m 2ms
<-- GET /api/players/transactions/cmijfilg90000m2esoerheb14
💰 [Players] Getting transactions for session: cmijfilg90000m2esoerheb14
💰 [Players] Found 12 transactions
--> GET /api/players/transactions/cmijfilg90000m2esoerheb14 [32m200[0m 1ms
<-- PUT /api/players/transaction/cmijhu7dq0017m2hhhbym1gol
💰 [Players] Updating transaction: cmijhu7dq0017m2hhhbym1gol
💰 [Players] Transaction updated: cmijhu7dq0017m2hhhbym1gol
--> PUT /api/players/transaction/cmijhu7dq0017m2hhhbym1gol [32m200[0m 9ms
<-- GET /api/players/transactions/cmijfilg90000m2esoerheb14
💰 [Players] Getting transactions for session: cmijfilg90000m2esoerheb14
💰 [Players] Found 12 transactions
--> GET /api/players/transactions/cmijfilg90000m2esoerheb14 [32m200[0m 1ms
<-- GET /api/game/cmijfilg90000m2esoerheb14/summary
🎮 [Game] Getting summary for session: cmijfilg90000m2esoerheb14
🎮 [Game] Summary calculated - Net profit: $-396.00, Till balance: $3804.00
--> GET /api/game/cmijfilg90000m2esoerheb14/summary [32m200[0m 1ms
<-- GET /api/game/active
🎮 [Game] Getting active game session
🎮 [Game] Found active session: cmijfilg90000m2esoerheb14
--> GET /api/game/active [32m200[0m 2ms
<-- GET /api/dealers/downs/cmijfilg90000m2esoerheb14
🎲 [Dealers] Getting downs for session: cmijfilg90000m2esoerheb14
🎲 [Dealers] Found 4 dealer downs
--> GET /api/dealers/downs/cmijfilg90000m2esoerheb14 [32m200[0m 2ms
<-- GET /api/game/active
🎮 [Game] Getting active game session
🎮 [Game] Found active session: cmijfilg90000m2esoerheb14
--> GET /api/game/active [32m200[0m 2ms
<-- GET /api/game/cmijfilg90000m2esoerheb14/summary
🎮 [Game] Getting summary for session: cmijfilg90000m2esoerheb14
🎮 [Game] Summary calculated - Net profit: $-396.00, Till balance: $3804.00
--> GET /api/game/cmijfilg90000m2esoerheb14/summary [32m200[0m 3ms
<-- GET /api/players/transactions/cmijfilg90000m2esoerheb14
💰 [Players] Getting transactions for session: cmijfilg90000m2esoerheb14
💰 [Players] Found 12 transactions
--> GET /api/players/transactions/cmijfilg90000m2esoerheb14 [32m200[0m 2ms
Failed to find Response internal state key
✅ Environment variables validated successfully
🔐 [Auth] Initializing Better Auth...
✅ [Auth] Better Auth initialized
🔗 [Auth] Base URL: https://preview-whjxltxnjtvq.share.sandbox.dev
🌐 [Auth] Trusted origins: vibecode://, http://localhost:3000, https://preview-whjxltxnjtvq.share.sandbox.dev
🔧 Initializing Hono application...
🔐 Mounting Better Auth handler at /api/auth/*
🎮 Mounting game routes at /api/game
💰 Mounting player routes at /api/players
🎲 Mounting dealer routes at /api/dealers
💸 Mounting expense routes at /api/expenses
⚙️  Starting server...
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📍 Environment: development
🚀 Server is running on port 3000
🔗 Base URL: http://localhost:3000
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📚 Available endpoints:
  🔐 Auth:     /api/auth/*
  🎮 Game:     GET /api/game/active, POST /api/game/end, GET /api/game/:id/summary
  💰 Players:  POST /api/players/transaction, GET /api/players/transactions/:sessionId
  🎲 Dealers:  POST /api/dealers/down, GET /api/dealers/downs/:sessionId
  💸 Expenses: POST /api/expenses, GET /api/expenses/:sessionId
  💚 Health:   GET /health
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

1 | (function (entry, fetcher)
              ^
SyntaxError: Export named 'updateDealerDownRequestSchema' not found in module '/home/user/workspace/shared/contracts.ts'.
      at loadAndEvaluateModule (1:11)
